2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix two spurious testsuite failures on IRIX 6.5.
	* tests/suffix13.test (Makefile.am): Account for VPATH issues on
	weaker make implementations (e.g. IRIX 6.5).
	* tests/parallel-tests8.test: Likewise, plus a required related
	change.
	Reported by Ralf Wildenhues.  The bugs have been there from the
	first versions of the affected test scripts.

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: cygnus mode doesn't require AM_CYGWIN32 macro.
	* doc/automake.texi (Cygnus): Mode 'cygnus' does not require
	the AM_CYGWIN32 macro (and indeed hasn't required it since at
	least commit Release-1-2-31-g3038064 "merged changes from
	Cygnus" of 1997-08-25).

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	distlinksbrk.test: Work around botched "make -k".
	* tests/distlinksbrk.test: Run "make" multiple times and grep
	its output each time for a single error message, rather than
	running "make -k" one single time and grepping its output for
	all the expected error messages.  This should work around make
	implementations with limited (broken?) `-k' support; for more
	information, see these subthreads on the automake-patches list:
	  - 2010-11-15, "Testsuite failures on HP-UX 11.23",
	    <http://lists.gnu.org/archive/html/automake-patches/2010-11/msg00162.html>
	  - 2010-11-15, "Testsuite failures on IRIX 6.5",
	    <http://lists.gnu.org/archive/html/automake-patches/2010-11/msg00166.html>

2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix sed-related buglet in test "subdir5.test"
	* tests/subdir5.test: Always terminate text passed to the
	`i' sed command with a newline, to work around limitations
	in e.g. older OpenBSD sed.

2010-12-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: fix blunder in example about python extension modules
	* doc/automake.texi (Python): Use `quaternion_la_SOURCES',
	not `quaternion_SOURCES', to declare the sources of python