@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2009, 2010  Free Software Foundation, Inc.
+# Copyright (C) 2009, 2010, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -39,7 +39,7 @@ TESTS = foo.test
 TESTS += $(srcdir)/bar.test $(top_srcdir)/baz.test
 .in.test:
 ## Account for VPATH issues on weaker make implementations (e.g. IRIX 6.5)
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 	chmod +x $@
 check_SCRIPTS = $(TESTS)
 EXTRA_DIST = foo.in foo.test
