@@ -1,6 +1,6 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003, 2006, 2009, 2010 Free Software Foundation,
-# Inc.
+# Copyright (C) 2002, 2003, 2006, 2009, 2010, 2011 Free Software
+# Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -39,7 +39,7 @@ SUFFIXES = .baz .c
 .baz.c:
 	case $@ in sub/*) $(MKDIR_P) sub;; *) :;; esac
 ## Account for VPATH issues on weaker make implementations (e.g. IRIX 6.5)
-	cp `test -f $< || echo $(srcdir)/`$< $@
+	cp `test -f '$<' || echo $(srcdir)/`$< $@
 
 DISTCLEANFILES = sub/bar.c
 
