@@ -1,3 +1,10 @@
+2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	tests: fix VPATH auto-expansion workarounds.
+	* tests/parallel-tests8.test, tests/suffix13.test:
+	Ensure $< is not surrounded by white space, to prevent Solaris
+	make from applying automatic VPATH text expansion.
+
 2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Fix two spurious testsuite failures on IRIX 6.5.
